Fix asset details view spacing (Closes #40).

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -84,7 +84,8 @@ a, .page-link {
 }
 
 .row-grid {
-    margin-top: 10px;
+    margin-top: 15px;
+    line-height: 20px;
 }
 
 .cardinality {
